# go-libghostty

./: CMakeLists.txt  Makefile  README.md  TODO.md  disable-xcframework.patch  doc.go  flake.nix  focus.go  formatter.go  get_multi.go  go.mod  grid_ref.go  key_encoder.go  key_event.go  key_string.go  kitty_graphics.go  kitty_graphics_test.go  mods_string.go  mouse_encoder.go  mouse_event.go  paste.go  paste_test.go  render_state.go  render_state_cell.go  render_state_data.go  render_state_row.go  screen.go  string_test.go  style.go  sys.go  sys_builtin.go  sys_builtin_test.go  sys_test.go  terminal.go  terminal_data.go  terminal_opt.go
.agents/skills/discovering-upstream-apis/: SKILL.md
.agents/skills/discovering-upstream-apis/scripts/: latest-upstream-commit.sh
.agents/skills/upstream-api-feedback/: SKILL.md
.buildkite/: pipeline.yml
.buildkite/hooks/: pre-command
.buildkite/scripts/: mirror-to-github  retry-on-zig-fetch
.github/workflows/: test.yml
.tangled/workflows/: test.yml
examples/build-info/: main.go
examples/colors/: main.go
examples/effects/: main.go
examples/formatter/: main.go
examples/grid-traverse/: main.go
examples/modes/: main.go
examples/render/: main.go
sys/png/: decode.go  decode_test.go
